# better-cov

./: .gitignore  README.md  coverage_output.json  pyproject.toml  requirements.txt  run_coverage.py  run_discovery.py  verify_setup.py
merit-travelops-demo/: .env.example  .gitignore  CLUSTERING_EXPERIMENTS.md  PATCH_SURFACE.yml  README.md  pyproject.toml  requirements.txt
merit-travelops-demo/.merit/: README.md
merit-travelops-demo/app/: __init__.py  agent.py  config.py  llm_client.py  postprocess.py  prompting.py  retrieval.py  router.py  schemas.py  state.py  tracing.py
merit-travelops-demo/app/tools/: __init__.py  flights.py  hotels.py  weather.py  web_search.py
merit-travelops-demo/examples/: __init__.py  basic_usage.py
merit-travelops-demo/scripts/: analyze_cluster_comparison.py  analyze_llm_timing.py  cluster_failures.py  collect_all_failures.sh  compare_all_models.py  compare_embedding_models.sh  extract_failure_signature.py  run_all_faults.sh  sample_cluster_representatives.py  view_trace.py
merit-travelops-demo/tests/: __init__.py  conftest.py  merit_travelops_contract.py  merit_travelops_control_flow.py  merit_travelops_determinism.py  merit_travelops_grounding.py  merit_travelops_postprocess.py  merit_travelops_prompting.py  merit_travelops_retrieval.py  merit_travelops_routing.py  merit_travelops_state.py  merit_travelops_tool_args.py
merit-travelops-demo/tests/faults/: __init__.py  patchers.py  profiles.py
merit-travelops-demo/tests/fixtures/: __init__.py  expected_schemas.py  kb_docs.py  scenarios.py
merit-travelops-demo/traces/: .gitkeep
(+34 files in other folders)
