[project]
name = "better-cov"
version = "0.1.0"
description = "Contract discovery agent using Claude Code Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
discover = "run_discovery:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
